--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,8 @@
 
     <activity android:name=".MainActivity" />
     <activity android:name=".HideNavigationActivity" />
+    <activity
+      android:name=".HideNavigation2Activity"
+      android:theme="@style/AppTheme.Hoge" />
   </application>
 </manifest>
